# architecture

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: data.py  load_from_safetensors.py  main.py
src/models/: common.py
src/models/baseline/: model.py  representation.py
