[project]
name = "architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wandb>=0.24.0",
    "takpy>=0.9.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]


[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.14.14", "pytest>=9.0.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = [
    "ANN",
    "B",
    "A",
    "C4",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "TC",
    "ARG",
    "PTH",
    "NPY",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "I",
    "PL",
    "UP",
    "FURB",
    "RUF",
]

[tool.mypy]
follow_untyped_imports = true

[tool.pytest]
python_files = ["*.py"]
